footer image change

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                     <div class="col-lg-6 col-md-6 single-item">
                         <div class="f-item opening-hours d-lg-flex d-sm-block">
                             <!-- <h4 class="widget-title">S L B I Group</h4> -->
-                            <img src="/assets/img/logo-slbi-footer.png" class="mb-3 mb-lg-0 mb-md-3" alt="">
+                            <img src="/assets/img/founder-home.jpg"  alt="">
                             <p style="text-align: justify;">
                                 S L B I GROUP’s vision is to digitize the Industrial Campus, Courses &amp; Trainings
                                 and Manufacturing Products &amp; Services, Export, Import, Supermarkets &amp;
