--- a/index.html
+++ b/index.html
@@ -384,12 +384,11 @@
         <div class="container">
             <div class="f-items default-padding">
                 <div class="row">
-                    <img src="/assets/img/founder-home.jpg"  alt="">
                     <!-- Single Item -->
                     <div class="col-lg-6 col-md-6 single-item">
                         <div class="f-item opening-hours d-lg-flex d-sm-block">
                             <!-- <h4 class="widget-title">S L B I Group</h4> -->
-                           
+                            <img src="/assets/img/logo-slbi-footer.png" class="mb-3 mb-lg-0 mb-md-3" alt="">
                             <p style="text-align: justify;">
                                 S L B I GROUP’s vision is to digitize the Industrial Campus, Courses &amp; Trainings
                                 and Manufacturing Products &amp; Services, Export, Import, Supermarkets &amp;
