--- a/index.html
+++ b/index.html
@@ -378,97 +378,10 @@
 
 
 
+    <div class="container bg-dark">
+        <img src="/assets/img/logo-slbi-footer.png" alt="">
+    </div>
 
-    <!-- Start Footer  ============================================= -->
-    <footer class="bg-dark text-light">
-        <div class="container">
-            <div class="f-items default-padding">
-                <div class="row">
-                    <!-- Single Item -->
-                    <div class="col-lg-6 col-md-6 single-item">
-                        <div class="f-item opening-hours d-lg-flex d-sm-block">
-                            <!-- <h4 class="widget-title">S L B I Group</h4> -->
-                            <img src="/assets/img/logo-slbi-footer.png" class="mb-3 mb-lg-0 mb-md-3" alt="">
-                            <p style="text-align: justify;">
-                                S L B I GROUP’s vision is to digitize the Industrial Campus, Courses &amp; Trainings
-                                and Manufacturing Products &amp; Services, Export, Import, Supermarkets &amp;
-                                Shopping Malls, Wholesale Marketing, Retail Marketing, International Transit
-                                and E-Commerce in the world in just a few years and barely.
-                            </p>
-                        </div>
-                    </div>
-                    <!-- End Single Item -->
-                    <!-- Single Item -->
-                    <div class="col-lg-3 col-md-6 single-item">
-                        <div class="f-item link">
-                            <h4 class="widget-title">Our Projects</h4>
-                            <ul>
-                                <li>
-                                    <a href="#">Oil & Gas</a>
-                                </li>
-                                <li>
-                                    <a href="#">Chemical Research</a>
-                                </li>
-                                <li>
-                                    <a href="#">Industrial</a>
-                                </li>
-                                <li>
-                                    <a href="#">Construction</a>
-                                </li>
-                                <li>
-                                    <a href="#">Energy</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- End Single Item -->
-                    <!-- Single Item -->
-                    <div class="col-lg-3 col-md-6 single-item">
-                        <div class="f-item link">
-                            <h4 class="widget-title">Useful Links</h4>
-                            <ul>
-                                <li>
-                                    <a href="#">Latest News</a>
-                                </li>
-                                <li>
-                                    <a href="#">Careers</a>
-                                </li>
-                                <li>
-                                    <a href="#">General Inquiries</a>
-                                </li>
-                                <li>
-                                    <a href="#">Case Studies</a>
-                                </li>
-                                <li>
-                                    <a href="#">Contact Us</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- End Single Item -->
-                </div>
-            </div>
-        </div>
-        <!-- Fixed Shape -->
-
-        <div class="footer-bottom">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <p>&copy; Copyright 2022. All Rights Reserved by <a target="_blank" href="#">FA Design
-                                Studio</a></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Start Footer Bottom -->
-
-        <div class="fixed-shape">
-            <img src="assets/img/shape/footer-shape.png" alt="Shape">
-        </div>
-        <!-- End Fixed Shape -->
-    </footer>
-    <!-- End Footer -->
 
     <!-- jQuery Frameworks
     ============================================= -->
