footer with menu links

--- a/index.html
+++ b/index.html
@@ -92,17 +92,17 @@
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Grid Colum</a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="gallery-grid-2-colum.html">Gallery Two Colum</a></li>
-                                        <li><a href="gallery-grid-3-colum.html">Gallery Three Colum</a></li>
-                                        <li><a href="gallery-grid-4-colum.html">Gallery Four Colum</a></li>
+                                        <li><a href="#">Gallery Two Colum</a></li>
+                                        <li><a href="#">Gallery Three Colum</a></li>
+                                        <li><a href="#">Gallery Four Colum</a></li>
                                     </ul>
                                 </li>
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Masonary Colum</a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="gallery-masonary-2-colum.html">Gallery Two Colum</a></li>
-                                        <li><a href="gallery-masonary-3-colum.html">Gallery Three Colum</a></li>
-                                        <li><a href="gallery-masonary-4-colum.html">Gallery Four Colum</a></li>
+                                        <li><a href="#">Gallery Two Colum</a></li>
+                                        <li><a href="#">Gallery Three Colum</a></li>
+                                        <li><a href="#">Gallery Four Colum</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="gallery-load-more.html">Project With Load More</a></li>
@@ -112,18 +112,18 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Our Products</a>
                             <ul class="dropdown-menu">
-                                <li><a href="services.html">Services Version One</a></li>
-                                <li><a href="services-2.html">Services Version Two</a></li>
-                                <li><a href="services-3.html">Services Version Three</a></li>
-                                <li><a href="services-details.html">Services Details</a></li>
+                                <li><a href="#">Services Version One</a></li>
+                                <li><a href="#">Services Version Two</a></li>
+                                <li><a href="#">Services Version Three</a></li>
+                                <li><a href="#">Services Details</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Partners and Sponsors</a>
                             <ul class="dropdown-menu">
-                                <li><a href="team.html">Team Grid</a></li>
-                                <li><a href="team-carousel.html">Team Carousel</a></li>
-                                <li><a href="team-single.html">Team Single</a></li>
+                                <li><a href="#">Team Grid</a></li>
+                                <li><a href="#">Team Carousel</a></li>
+                                <li><a href="#">Team Single</a></li>
                             </ul>
                         </li>
                         <li>
@@ -379,7 +379,7 @@
 
 
     <div class="container bg-dark">
-        <img src="/assets/img/logo-slbi-footer.png" alt="">
+        <img src="/assets/img/banks/2.jpg" alt="">
     </div>
 
 
