--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             <div class="row align-center">
                 <div class="about-style-five col-lg-5">
                     <div class="thumb">
-                        <img src="assets/img/energy/founder.jpg" alt="Thumb">
+                        <img src="assets/img/energy/eco-house.png" alt="Thumb">
                     </div>
                 </div>
                 <div class="about-style-five col-lg-6 offset-lg-1">
