--- a/index.html
+++ b/index.html
@@ -378,9 +378,9 @@
 
 
 
-    <div class="container bg-dark">
-        <img src="/assets/img/banks/2.jpg" alt="">
-    </div>
+
+    <img src="assets/img/energy/eco-house.png" alt="">
+
 
 
     <!-- jQuery Frameworks
