--- a/index.html
+++ b/index.html
@@ -378,9 +378,9 @@
 
 
 
-
-    <img src="assets/img/energy/eco-house.png" alt="">
-
+    <div class="container bg-dark">
+        <img src="/assets/img/banks/2.jpg" alt="">
+    </div>
 
 
     <!-- jQuery Frameworks
