--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 
 
 
-    <div class="container bg-dark">
+    <div style="background-color: red;">
         <img src="/assets/img/banks/2.jpg" alt="">
     </div>
 
