--- a/index.html
+++ b/index.html
@@ -320,7 +320,9 @@
     </div>
     <!-- End Investment Area -->
 
-
+    <div style="background-color: red;">
+        <img src="/assets/img/energy/banner-2.jpg" alt="energy bn2">
+    </div>
 
     <!-- Start Bankers Area  ============================================= -->
     <div class="clients-area default-padding bg-dark text-light">
@@ -378,9 +380,7 @@
 
 
 
-    <div style="background-color: red;">
-        <img src="/assets/img/banks/2.jpg" alt="">
-    </div>
+
 
 
     <!-- jQuery Frameworks
