revert all changes

--- a/index.html
+++ b/index.html
@@ -92,17 +92,17 @@
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Grid Colum</a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="#">Gallery Two Colum</a></li>
-                                        <li><a href="#">Gallery Three Colum</a></li>
-                                        <li><a href="#">Gallery Four Colum</a></li>
+                                        <li><a href="gallery-grid-2-colum.html">Gallery Two Colum</a></li>
+                                        <li><a href="gallery-grid-3-colum.html">Gallery Three Colum</a></li>
+                                        <li><a href="gallery-grid-4-colum.html">Gallery Four Colum</a></li>
                                     </ul>
                                 </li>
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Masonary Colum</a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="#">Gallery Two Colum</a></li>
-                                        <li><a href="#">Gallery Three Colum</a></li>
-                                        <li><a href="#">Gallery Four Colum</a></li>
+                                        <li><a href="gallery-masonary-2-colum.html">Gallery Two Colum</a></li>
+                                        <li><a href="gallery-masonary-3-colum.html">Gallery Three Colum</a></li>
+                                        <li><a href="gallery-masonary-4-colum.html">Gallery Four Colum</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="gallery-load-more.html">Project With Load More</a></li>
@@ -112,18 +112,18 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Our Products</a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">Services Version One</a></li>
-                                <li><a href="#">Services Version Two</a></li>
-                                <li><a href="#">Services Version Three</a></li>
-                                <li><a href="#">Services Details</a></li>
+                                <li><a href="services.html">Services Version One</a></li>
+                                <li><a href="services-2.html">Services Version Two</a></li>
+                                <li><a href="services-3.html">Services Version Three</a></li>
+                                <li><a href="services-details.html">Services Details</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Partners and Sponsors</a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">Team Grid</a></li>
-                                <li><a href="#">Team Carousel</a></li>
-                                <li><a href="#">Team Single</a></li>
+                                <li><a href="team.html">Team Grid</a></li>
+                                <li><a href="team-carousel.html">Team Carousel</a></li>
+                                <li><a href="team-single.html">Team Single</a></li>
                             </ul>
                         </li>
                         <li>
@@ -222,7 +222,7 @@
             <div class="row align-center">
                 <div class="about-style-five col-lg-5">
                     <div class="thumb">
-                        <img src="assets/img/energy/eco-house.png" alt="Thumb">
+                        <img src="assets/img/energy/founder.jpg" alt="Thumb">
                     </div>
                 </div>
                 <div class="about-style-five col-lg-6 offset-lg-1">
@@ -320,9 +320,7 @@
     </div>
     <!-- End Investment Area -->
 
-    <div style="background-color: red;">
-        <img src="/assets/img/energy/banner-2.jpg" alt="energy bn2">
-    </div>
+
 
     <!-- Start Bankers Area  ============================================= -->
     <div class="clients-area default-padding bg-dark text-light">
@@ -381,7 +379,96 @@
 
 
 
+    <!-- Start Footer  ============================================= -->
+    <footer class="bg-dark text-light">
+        <div class="container">
+            <div class="f-items default-padding">
+                <div class="row">
+                    <!-- Single Item -->
+                    <div class="col-lg-6 col-md-6 single-item">
+                        <div class="f-item opening-hours d-lg-flex d-sm-block">
+                            <!-- <h4 class="widget-title">S L B I Group</h4> -->
+                            <img src="/assets/img/logo-slbi-footer.png" class="mb-3 mb-lg-0 mb-md-3" alt="">
+                            <p style="text-align: justify;">
+                                S L B I GROUP’s vision is to digitize the Industrial Campus, Courses &amp; Trainings
+                                and Manufacturing Products &amp; Services, Export, Import, Supermarkets &amp;
+                                Shopping Malls, Wholesale Marketing, Retail Marketing, International Transit
+                                and E-Commerce in the world in just a few years and barely.
+                            </p>
+                        </div>
+                    </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="col-lg-3 col-md-6 single-item">
+                        <div class="f-item link">
+                            <h4 class="widget-title">Our Projects</h4>
+                            <ul>
+                                <li>
+                                    <a href="#">Oil & Gas</a>
+                                </li>
+                                <li>
+                                    <a href="#">Chemical Research</a>
+                                </li>
+                                <li>
+                                    <a href="#">Industrial</a>
+                                </li>
+                                <li>
+                                    <a href="#">Construction</a>
+                                </li>
+                                <li>
+                                    <a href="#">Energy</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="col-lg-3 col-md-6 single-item">
+                        <div class="f-item link">
+                            <h4 class="widget-title">Useful Links</h4>
+                            <ul>
+                                <li>
+                                    <a href="#">Latest News</a>
+                                </li>
+                                <li>
+                                    <a href="#">Careers</a>
+                                </li>
+                                <li>
+                                    <a href="#">General Inquiries</a>
+                                </li>
+                                <li>
+                                    <a href="#">Case Studies</a>
+                                </li>
+                                <li>
+                                    <a href="#">Contact Us</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- End Single Item -->
+                </div>
+            </div>
+        </div>
+        <!-- Fixed Shape -->
 
+        <div class="footer-bottom">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <p>&copy; Copyright 2022. All Rights Reserved by <a target="_blank" href="#">FA Design
+                                Studio</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Start Footer Bottom -->
+
+        <div class="fixed-shape">
+            <img src="assets/img/shape/footer-shape.png" alt="Shape">
+        </div>
+        <!-- End Fixed Shape -->
+    </footer>
+    <!-- End Footer -->
 
     <!-- jQuery Frameworks
     ============================================= -->
