--- a/index copy.html
+++ b/index copy.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 
+<!-- Mirrored from validthemes.live/themeforest/dustra/solar-energy.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 19 Sep 2022 18:47:33 GMT -->
+
 <head>
     <!-- ========== Meta Tags ========== -->
     <meta charset="utf-8">
@@ -85,19 +87,47 @@
                             </ul>
                         </li>
                         <li class="dropdown">
-                            <a href="#">Our Projects</a>
-
+                            <a href="#" class="dropdown-toggle smooth-menu" data-toggle="dropdown">Our Projects</a>
+                            <ul class="dropdown-menu">
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Grid Colum</a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="gallery-grid-2-colum.html">Gallery Two Colum</a></li>
+                                        <li><a href="gallery-grid-3-colum.html">Gallery Three Colum</a></li>
+                                        <li><a href="gallery-grid-4-colum.html">Gallery Four Colum</a></li>
+                                    </ul>
+                                </li>
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Masonary Colum</a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="gallery-masonary-2-colum.html">Gallery Two Colum</a></li>
+                                        <li><a href="gallery-masonary-3-colum.html">Gallery Three Colum</a></li>
+                                        <li><a href="gallery-masonary-4-colum.html">Gallery Four Colum</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="gallery-load-more.html">Project With Load More</a></li>
+                                <li><a href="projects-details.html">Project Details</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Our Products</a>
+                            <ul class="dropdown-menu">
+                                <li><a href="services.html">Services Version One</a></li>
+                                <li><a href="services-2.html">Services Version Two</a></li>
+                                <li><a href="services-3.html">Services Version Three</a></li>
+                                <li><a href="services-details.html">Services Details</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Partners and Sponsors</a>
+                            <ul class="dropdown-menu">
+                                <li><a href="team.html">Team Grid</a></li>
+                                <li><a href="team-carousel.html">Team Carousel</a></li>
+                                <li><a href="team-single.html">Team Single</a></li>
+                            </ul>
                         </li>
                         <li>
-                            <a href="#">Our Products</a>
-
-                        </li>
-                        <li>
-                            <a href="#">Partners and Sponsors</a>
-
-                        </li>
-                        <li>
-                            <a href="#">Contact Us</a>
+                            <a href="contact.html">Contact Us</a>
                         </li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
@@ -189,13 +219,13 @@
     <!-- Start Founder Message ============================================= -->
     <div class="about-style-five-area default-padding">
         <div class="container">
-            <div class="row">
-                <!-- <div class="about-style-five col-lg-5">
+            <div class="row align-center">
+                <div class="about-style-five col-lg-5">
                     <div class="thumb">
                         <img src="assets/img/energy/founder.jpg" alt="Thumb">
                     </div>
-                </div> -->
-                <div class="about-style-five col-lg-12">
+                </div>
+                <div class="about-style-five col-lg-6 offset-lg-1">
                     <!-- <h4>About us</h4> -->
                     <h2>Founder Message</h2>
                     <blockquote>
@@ -304,7 +334,10 @@
                 <div class="row align-center">
                     <div class="col-lg-5 left-info">
                         <h2>Our Bankers</h2>
-
+                        <p>
+                            Forming two comfort invited. Yet she income effect edward. Entire desire way design few. Mrs
+                            sentiments led solicitude estimating friendship fat. Meant those event
+                        </p>
                     </div>
                     <div class="col-lg-6 offset-lg-1 clients-box">
                         <div class="clients-items owl-carousel owl-theme text-center">
