--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Dustra- Factory & Industrial Template">
+    <meta name="description" content="SLBI Group">
 
     <!-- ========== Page Title ========== -->
-    <title>S L B I Group</title>
+    <title>SLBI Group</title>
 
     <!-- ========== Favicon Icon ========== -->
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
@@ -75,7 +75,7 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle smooth-menu" data-toggle="dropdown">About Us</a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">Abstracts</a></li>
+                                <li><a href="aboutus.html">Abstracts</a></li>
                                 <li><a href="#">Founder Message</a></li>
                                 <li><a href="#">Board of Directors</a></li>
                                 <li><a href="#">Our Vision</a></li>
