color theme and about page updated

--- a/aboutus.html
+++ b/aboutus.html
@@ -252,8 +252,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <p>&copy; Copyright 2022. All Rights Reserved by <a target="_blank" href="#">FA Design
-                                Studio</a></p>
+                        <p>&copy; Copyright 2022. All Rights Reserved by <a target="_blank" href="#">S L B I Group</a>
+                        </p>
                     </div>
                 </div>
             </div>
