--- a/index.html
+++ b/index.html
@@ -285,10 +285,8 @@
     </div>
     <!-- End Investment Area -->
 
-
-
     <!-- Start Bankers Area  ============================================= -->
-    <div class="clients-area default-padding bg-dark text-light">
+    <div class="clients-area default-padding bg-dark-custom text-light">
         <!-- Fixed Shape -->
         <div class="fixed-shape">
             <img src="assets/img/shape/1.png" alt="Shape">
@@ -337,9 +335,6 @@
         </div>
     </div>
     <!-- End Bankers Area -->
-
-
-
 
     <!-- Start Footer  ============================================= -->
     <footer class="bg-dark text-light">
@@ -417,8 +412,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <p>&copy; Copyright 2022. All Rights Reserved by <a target="_blank" href="#">FA Design
-                                Studio</a></p>
+                        <p>&copy; Copyright 2022. All Rights Reserved by <a target="_blank" href="#">S L B I Group</a>
+                        </p>
                     </div>
                 </div>
             </div>
